// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeavePeriodContinuous renders the page with bonding leave content 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Leave details"
>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": false,
          "label": "Yes",
          "value": "true",
        },
        Object {
          "checked": false,
          "label": "No",
          "value": "false",
        },
      ]
    }
    hint={null}
    label="Do you need to take off work completely for a period of time (continuous leave)?"
    name="has_continuous_leave_periods"
    onChange={[Function]}
    type="radio"
    value=""
  />
  <ConditionalContent
    fieldNamesClearedWhenHidden={
      Array [
        "claim.leave_details.continuous_leave_periods[0]",
      ]
    }
    getField={[Function]}
    removeField={[Function]}
    updateFields={[Function]}
    visible={null}
  >
    <Heading
      level="2"
      size="1"
    >
      Enter the start and end dates for your continuous leave.
    </Heading>
    <Lead>
      <Trans
        i18nKey="pages.claimsLeavePeriodContinuous.datesLead"
        tOptions={
          Object {
            "context": "bonding",
          }
        }
      />
    </Lead>
    <InputDate
      dayLabel="Day"
      example="For example: 04 / 28 / 1986"
      label="First day of leave"
      monthLabel="Month"
      name="leave_details.continuous_leave_periods[0].start_date"
      onChange={[Function]}
      smallLabel={true}
      value=""
      yearLabel="Year"
    />
    <InputDate
      dayLabel="Day"
      example="For example: 04 / 28 / 1986"
      label="Last day of leave"
      monthLabel="Month"
      name="leave_details.continuous_leave_periods[0].end_date"
      onChange={[Function]}
      smallLabel={true}
      value=""
      yearLabel="Year"
    />
  </ConditionalContent>
</QuestionPage>
`;

exports[`LeavePeriodContinuous renders the page with bonding leave content 2`] = `"If you have already taken some or all of your family leave, tell us when you first missed work and your last day of leave."`;

exports[`LeavePeriodContinuous renders the page with medical leave content 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Leave details"
>
  <Alert
    state="info"
  >
    You will need a completed medical leave certification form for this section.
  </Alert>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": false,
          "label": "Yes",
          "value": "true",
        },
        Object {
          "checked": false,
          "label": "No",
          "value": "false",
        },
      ]
    }
    hint="Refer to Question 26 in the \\"Estimate leave details\\" section of the certification form (page 6)."
    label="Do you need to take off work completely for a period of time (continuous leave)?"
    name="has_continuous_leave_periods"
    onChange={[Function]}
    type="radio"
    value=""
  />
  <ConditionalContent
    fieldNamesClearedWhenHidden={
      Array [
        "claim.leave_details.continuous_leave_periods[0]",
      ]
    }
    getField={[Function]}
    removeField={[Function]}
    updateFields={[Function]}
    visible={null}
  >
    <Heading
      level="2"
      size="1"
    >
      Enter the start and end dates for your continuous leave.
    </Heading>
    <Lead>
      <Trans
        i18nKey="pages.claimsLeavePeriodContinuous.datesLead"
        tOptions={
          Object {
            "context": "medical",
          }
        }
      />
    </Lead>
    <InputDate
      dayLabel="Day"
      example="For example: 04 / 28 / 1986"
      label="First day of leave"
      monthLabel="Month"
      name="leave_details.continuous_leave_periods[0].start_date"
      onChange={[Function]}
      smallLabel={true}
      value=""
      yearLabel="Year"
    />
    <InputDate
      dayLabel="Day"
      example="For example: 04 / 28 / 1986"
      label="Last day of leave"
      monthLabel="Month"
      name="leave_details.continuous_leave_periods[0].end_date"
      onChange={[Function]}
      smallLabel={true}
      value=""
      yearLabel="Year"
    />
  </ConditionalContent>
</QuestionPage>
`;

exports[`LeavePeriodContinuous renders the page with medical leave content 2`] = `
Array [
  "If you have already taken some or all of your leave for this condition, tell us when you first missed work and your last day of leave.",
  <br
    key="br-1"
  />,
  <br
    key="br-2"
  />,
  "Refer to Question 27 in the \\"Estimate leave details\\" section of the certification form (page 6).",
]
`;
